# ipis

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: class.rs
src/: account_type.rs  attention.rs  data.rs  env.rs  function.rs  lib.rs  logger.rs  path.rs  pin.rs  primitives.rs  resource.rs  storage.rs  stream.rs  word.rs
src/class/: cursor.rs  metadata.rs  mod.rs
src/object/: data.rs  mod.rs
tests/: derive_simple.rs  io_uring.rs  stream.rs  ty_derive_simple.rs
