[package]
name = "ipis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = ["ipis-derive"]

[dependencies]
ipi = { git = "https://github.com/ulagbulag-village/ipi.git" }
ipis-derive = { path = "./derive", optional = true }

async-trait = "0.1"
bytecheck = "0.6"
log = "0.4"
rkyv = { version = "0.7", features = ["validation"] }
tokio = { version = "1.18", default-features = false, features = ["io-util"] }

[dev-dependencies]
bytecheck = "0.6"

[[test]]
name = "ty_derive_simple"
path = "tests/ty_derive_simple.rs"
required-features = ["derive", "rkyv/validation"]

[workspace]
members = [".", "derive"]
