[package]
name = "ipis"
version = "0.1.0"
edition = "2021"

authors = ["Ho Kim <ho.kim@ulagbulag.io>"]
description = "InterPlanetary Interface Service"
documentation = "https://docs.rs/ipis"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://ulagbulag.io/"
repository = "https://github.com/ulagbulag-village/ipis"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["derive"]
derive = ["ipis-derive"]

io-uring = ["tokio-uring"]
net = ["tokio/net"]
tokio-full = ["tokio/full"]

[dependencies]
ipi = { git = "https://github.com/ulagbulag-village/ipi.git" }
ipis-derive = { path = "./derive", optional = true }

async-recursion = "1.0"
async-trait = "0.1"
bitflags = "1.3"
bytecheck = "0.6"
futures = "0.3"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
num-traits = "0.2"
paste = "1.0"
pretty_env_logger = "0.4"
rkyv = { version = "0.7", features = ["archive_le", "validation"] }
serde = { version = "1.0", features = ["derive"] }

[target.'cfg(not(target_os = "wasi"))'.dependencies]
tokio = { version = "1.21", default-features = false, features = [
    "fs",
    "io-util",
    "macros",
    # NOTE: multithreading is currently **NOT** supported in `WASI`.
    "rt-multi-thread",
    "time",
    "sync",
] }
tokio-uring = { version = "0.3", optional = true }

[target.'cfg(target_os = "wasi")'.dependencies]
tokio = { version = "1.21", default-features = false, features = [
    "io-util",
    "macros",
    # NOTE: multithreading is currently **NOT** supported in `WASI`.
    "rt",
    "time",
    "sync",
] }

[[test]]
name = "derive_simple"
path = "tests/derive_simple.rs"
required-features = ["derive"]

[[test]]
name = "io_uring"
path = "tests/io_uring.rs"
required-features = ["io-uring"]

[workspace]
members = [".", "derive"]
